Styling of the home page has been done *header*

--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -26,11 +26,11 @@
         <!-- Main Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary justify-content-between main-menu text-uppercase pt-3 pb-3">
 
-            <a class="navbar-brand col-2" asp-action="Index">
+            <a class="navbar-brand col-md-2" asp-action="Index">
                 <img src="~/images/logo/SEED LOGO.png" width="32" height="40" alt="logo">
             </a>
-            <h4 class="navbar-title">SEED ACADEMY</h4>
-            <div class="navbar-nav top-nav col-2 d-flex justify-content-end">
+            <h4 class="navbar-title ">SEED ACADEMY</h4>
+            <div class="navbar-nav top-nav col-2  d-flex justify-content-end">
                 <a class="nav-item nav-link" asp-action="SignIn">Login</a>
                 <a class="nav-item nav-link" href="#contact_us">Contact us</a>
             </div>
