--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -2,6 +2,16 @@
     Layout = "_Layout";
     ViewBag.Title = "Home Page";
 }
+<!-- ONE-STOP -->
+<div class="w-90 p-0 bg-secondary text-center one-stop ">
+    <div class="card text-secondary border-0 rounded-0 h-100 bg-thirdly">
+        <div class="card-body text-center">
+            <a> <h5 class="card-title">ONE-STOP</h5></a>
+            <div class="offer-divider center"></div>
+            <p class="card-text">For kids who are struggling with scores and confidence and have slipped behind. We guarantee results!</p>
+        </div>
+    </div>
+</div>
 <header class="container-fluid bg-primary text-secondary text-center ">
     <div class="row mx-auto">
 
@@ -16,22 +26,22 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix01.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/1.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix02.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/2.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix03.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/3.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix04.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/4.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix05.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/5.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix06A.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6.png" alt="">
                     </div>
                 </div><!-- /.carousel-inner -->
 
@@ -56,7 +66,9 @@
                         <a href="#" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
+                <div class="offer-divider"></div>
             </div>
+
             <div class="card border-0 rounded-0 second offer">
                 <div class="card-body card-txt align-content-center d-flex flex-column justify-content-around">
                     <div class="">
@@ -65,7 +77,9 @@
                         <a href="#" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
+                <div class="offer-divider"></div>
             </div>
+
             <div class="card border-0 rounded-0 third offer">
                 <div class="card-body card-txt d-flex flex-column justify-content-around">
                     <div>
@@ -74,7 +88,9 @@
                         <a href="#" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
+                <div class="offer-divider"></div>
             </div>
+
             <div class="card border-0 rounded-0 fourth offer">
                 <div class="card-body card-txt d-flex flex-column justify-content-around">
                     <div>
@@ -85,17 +101,10 @@
                 </div>
             </div>
         </div>
-        <!-- ONE-STOP -->
-        <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12 p-0 float-left bg-secondary">
-            <div class="card text-secondary border-0 rounded-0 h-100 bg-primary">
-                <div class="card-body">
-                    <h5 class="card-title">ONE-STOP</h5>
-                    <p class="card-text">For kids who are struggling with scores and confidence and have slipped behind. We guarantee results!</p>
-                </div>
-            </div>
-        </div>
+
     </div>
 </header>
+
 <!-- Seed story Section-->
 <section class="page-section text-white" id="seed_story">
     <div class="container overflow-hidden">
