Seed Feed section redesigned

--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -107,9 +107,9 @@
 
 <!-- Seed story Section-->
 <section class="page-section text-white" id="seed_story">
-    <div class="container overflow-hidden">
+    <div class="container overflow-hidden pb-5">
         <!-- About Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary">Seed story</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary section-title">Seed story</h2>
         <!-- About Section Content-->
 
         <div class="row pt-5 font-weight-bold text-uppercase">
@@ -158,18 +158,19 @@
             <!-- first row-->
             <div class="row">
                 <div class="col-xl-8 col-md-12 col-xs-12" id="seed-feed">
-                    <div class="card progress-text p-0 text-secondary feed-card">
+                    <div class="card bg-primary p-0 text-secondary feed-card">
                         <div class="card-body text-center">
                             <h4 class="card-title text-uppercase">
                                 9 out of 10 SEED PARENTS AGREE THAT
                                 ENROLLING IN SEED WAS A GOOD DECISION.
                             </h4>
-                            <h5 class="card-subtitle pt-3 font-italic">
+                            <div class="seed-feed-divider div-transparent div-arrow-down"></div>
+                            <h5 class="card-subtitle py-3 font-italic">
                                 "SEED improved my child's confidence and grades at school" <br />
                                 "My child benefited from the coaching system at SEED"  <br />
                                 "SEED Teachers were very engaging and approachable"
                             </h5>
-                            <a href="#" class="nav-link p-0 pt-4"><h5>Find out more!</h5></a>
+                            <a href="#" class="btn btn-primary p-2"><h5 class="m-0">Find out more!</h5></a>
                         </div>
                     </div>
                 </div>
@@ -217,18 +218,19 @@
                     </div>
                 </div>
                 <div class="col-xl-8 col-md-12 col-xs-12" id="seed-feed">
-                    <div class="card progress-text p-0 text-secondary feed-card">
-                        <div class="card-body text-center">
+                    <div class="card bg-primary p-0 text-secondary feed-card">
+                        <div class="card-body text-center align-items-center">
                             <h4 class="card-title text-uppercase">
                                 99.6% of Our Students
                                 Got into Their Desired University
                             </h4>
-                            <h5 class="card-subtitle font-italic pt-3">
+                            <div class="seed-feed-divider div-transparent div-arrow-down"></div>
+                            <h5 class="card-subtitle font-italic py-3">
                                 "SEED helped me get into U of T Med Schoo!"<br />
                                 "I really appreciate SEED's coach in <br />
                                 "I really enjoyed attending SEED events to upgrade my profiles"
                             </h5>
-                            <a href="#" class="nav-link p-0 pt-4"><h5>Find out more!</h5></a>
+                            <a href="#" class="btn btn-primary p-2"><h5 class="m-0">Find out more!</h5></a>
                         </div>
                     </div>
                 </div>
@@ -241,7 +243,7 @@
     <div class="jumbotron">
         <div class="container pb-5">
             <!-- Method Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary ">Seed method</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary section-title">Seed method</h2>
             <!-- Method Section Content-->
             <div class="row pt-5 font-weight-bold text-uppercase">
                 <div class="col-xl-4 col-md-4 p-1 d-flex flex-row justify-content-around">
@@ -276,7 +278,7 @@
     </div>
 </section>
 <section class="page-section text-white" id="seed_partners">
-    <h2 class="page-section-heading text-center text-uppercase text-secondary">Seed Partners</h2>
+    <h2 class="page-section-heading text-center text-uppercase text-secondary section-title">Seed Partners</h2>
     <div class="container pb-5">
         <div class="customer-logos slider pt-5">
             <div class="slide"><img src="~/images/partners/HCDSB LOGO.png"></div>
