--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
 
     <section class="page-section text-white form-section" id="contact_us">
         <div class="jumbotron">
-            <h2 class="page-section-heading text-center text-uppercase text-secondary">Contact Us</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary section-title">Contact Us</h2>
             <div class="container contact-form">
                 <div class="contact-image">
                     <img src="~/images/logo/SEED LOGO.png" alt="rocket_contact" />
