seed method section redesign

--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -245,7 +245,7 @@
             <!-- Method Section Content-->
             <div class="row pt-5 font-weight-bold text-uppercase">
                 <div class="col-xl-4 col-md-4 p-1 d-flex flex-row justify-content-around">
-                    <div class="card bg-secondary p-0 method-section-card">
+                    <div class="card bg-secondary p-0 method-section-card low">
                         <div class="card-body text-center">
                             <div class="d-flex flex-column justify-content-center h-100">
                                 <a href="#"><h5 class="method-text">Experience<br /> Strengthens<br /> Learning<br /> (Gr.3-Gr.9)</h5></a>
@@ -254,7 +254,7 @@
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4 p-1 d-flex flex-row justify-content-around">
-                    <div class="card bg-secondary p-0 method-section-card">
+                    <div class="card bg-secondary p-0 method-section-card mid">
                         <div class="card-body text-center">
                             <div class="d-flex flex-column justify-content-center h-100">
                                 <a href="#"><h5 class="method-text">Academic<br /> Credit<br /> Essential<br /> (Gr.8-Gr.11)</h5></a>
@@ -263,7 +263,7 @@
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4 p-1 d-flex flex-row justify-content-around">
-                    <div class="card bg-secondary p-0 method-section-card">
+                    <div class="card bg-secondary p-0 method-section-card high">
                         <div class="card-body text-center">
                             <div class="d-flex flex-column justify-content-center h-100">
                                 <a href="#"><h5 class="method-text">Test<br /> Advancement<br /> Preparation<br /> (Gr.10-Gr.12)</h5></a>
