esl introduction school program layout has been fixed

--- a/SeedProject_V6/Views/Home/Esl.cshtml
+++ b/SeedProject_V6/Views/Home/Esl.cshtml
@@ -7,15 +7,15 @@
     <div class="jumbotron">
         <div class="container pb-5">
             <!-- Method Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary ">Miracle Begins with English Learning</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-primary section-title-primary">English Learning</h2>
             <!-- Method Section Content-->
             <div class="row pt-5 font-weight-bold text-uppercase">
-                <div class="col-xl-12 col-md-12 p-2 mb-3 d-flex flex-row justify-content-around border rounded bg-white opacity">
+                <div class="col-xl-12 col-md-12 p-2 mb-3 d-flex flex-row justify-content-around border rounded bg-white opacity b-radius">
                     <h5 class="text-wrap text-center text-secondary">
                         SEED ACADEMY is an education hub specialized in providing one-top empowerment to help students achieve higher at school, Academically and Socially.
                     </h5>
                 </div>
-                <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border rounded bg-white opacity">
+                <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border rounded bg-white opacity b-radius">
                     <h5 class="text-wrap text-center text-secondary">
                         Since 2012, S.E.E.D. has served students in Los Angeles (US), Toronto and Hamilton (Canada).
                         Students achievement proves that Target-Oriented Practice is most effective learning strategy.
@@ -27,8 +27,9 @@
 </section>
 
 <section class="page-section mb-0" id="seed_esl_body">
-    <div class="container">
-        <h2 class="page-section-heading text-center text-uppercase text-secondary">Seed english is different</h2>
+    <div class="container-fluid">
+        <h2 class="page-section-heading text-center text-uppercase text-secondary ">Seed english is different</h2>
+        <div class="container">
         <div class="row py-5">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
                 <h5>Not Just Vocabulary</h5>
@@ -46,7 +47,9 @@
                 <h5>It is Story</h5>
             </div>
         </div>
-        <h2 class="page-section-heading text-center text-uppercase text-secondary pb-5">Experience Strenghtens Learning</h2>
+        </div>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary pb-5 ">Experience Strenghtens Learning</h2>
+        <div class="container">
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
                 <h5>Not Just Vocabulary</h5>
@@ -68,6 +71,7 @@
                     <a class="btn btn-primary" asp-action="EnglishLearning">Register today!</a>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </section>
