--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="w-90 p-0 bg-secondary text-center one-stop ">
     <div class="card text-secondary border-0 rounded-0 h-100 bg-thirdly">
         <div class="card-body text-center">
-            <a> <h5 class="card-title">ONE-STOP</h5></a>
+            <a> <h5 class="card-title mb-1">ONE-STOP</h5></a>
             <div class="offer-divider center"></div>
             <p class="card-text">For kids who are struggling with scores and confidence and have slipped behind. We guarantee results!</p>
         </div>
