--- a/SeedProject_V6/Views/Home/Introduction.cshtml
+++ b/SeedProject_V6/Views/Home/Introduction.cshtml
@@ -7,16 +7,16 @@
     <div class="jumbotron">
         <div class="container pb-5">
             <!-- Method Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary ">About Seed</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-primary section-title-primary ">About Seed</h2>
             <!-- Method Section Content-->
             <div class="row pt-5 font-weight-bold text-uppercase">
-                <div class="col-xl-12 col-md-12 p-2 mb-3 d-flex flex-row justify-content-around border rounded bg-white opacity">
-                    <h5 class="text-wrap text-center text-secondary">
+                <div class="col-xl-12 col-md-12 p-2 mb-3 d-flex flex-row justify-content-around border  bg-secondary  opacity b-radius">
+                    <h5 class="text-wrap text-center text-secondary m-0 p-2">
                         SEED ACADEMY is an education hub specialized in providing one-top empowerment to help students achieve higher at school, Academically and Socially.
                     </h5>
                 </div>
-                <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border rounded bg-white opacity">
-                    <h5 class="text-wrap text-center text-secondary">
+                <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border  bg-secondary opacity b-radius">
+                    <h5 class="text-wrap text-center text-secondary m-0 p-2">
                         Since 2012, S.E.E.D. has served students in Los Angeles (US), Toronto and Hamilton (Canada). 
                         Students achievement proves that Target-Oriented Practice is most effective learning strategy.
                     </h5>
@@ -28,7 +28,7 @@
 
 <section class="page-section mb-0" id="seed_features">
     <!-- Section heading -->
-    <h2 class="page-section-heading text-center text-uppercase text-secondary">Why Seed is so great?</h2>
+    <h2 class="page-section-heading text-center text-uppercase text-secondary section-title">Why Seed is so great?</h2>
     <div class="container">
         <!-- Section description -->
         <div class="row pt-5 font-weight-bold text-uppercase">
