--- a/SeedProject_V6/Views/Home/SchoolProgram.cshtml
+++ b/SeedProject_V6/Views/Home/SchoolProgram.cshtml
@@ -6,7 +6,7 @@
 <section class="page-section text-white mb-0 pt-0" id="seed_schoolprogram">
     <div class="jumbotron">
         <div class="container">
-            <h2 class="page-section-heading text-center text-uppercase pb-5">School program partnership</h2>
+            <h2 class="page-section-heading text-center text-uppercase pb-5 text-primary section-title-primary">School program partnership</h2>
             <div class="row text-uppercase d-flex flex-row justify-content-xl-between justify-content-lg-center justify-content-md-around">
                 <div class="card border rounded p-1 my-3 bg-white col-xl-4 col-md-12 d-flex flex-column justify-content-center text-secondary text-center graphics-card">
                     <img class="my-2 graphics-img card-img" src="~/images/graphs/Canada.png" />
