--- a/SeedProject_V6/Views/Home/AcademicBoost.cshtml
+++ b/SeedProject_V6/Views/Home/AcademicBoost.cshtml
@@ -7,16 +7,16 @@
     <div class="jumbotron">
         <div class="container pb-5">
             <!-- Method Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary ">From English to <strong>BEST</strong></h2>
+            <h2 class="page-section-heading text-center text-uppercase text-primary  section-title-primary">From English to BEST</h2>
             <!-- Method Section Content-->
             <div class="row pt-5 font-weight-bold text-uppercase">
-                <div class="col-xl-12 col-md-12 p-2 mb-3 d-flex flex-row justify-content-around border rounded bg-white opacity">
-                    <h5 class="text-wrap text-center text-secondary">
+                <div class="col-xl-12 col-md-12 p-2 mb-3 d-flex flex-row justify-content-around border rounded bg-white opacity b-radius">
+                    <h5 class="text-wrap text-center text-secondary m-0 p-2">
                         SEED ACADEMY is an education hub specialized in providing one-top empowerment to help students achieve higher at school, Academically and Socially.
                     </h5>
                 </div>
-                <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border rounded bg-white opacity">
-                    <h5 class="text-wrap text-center text-secondary">
+                <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border rounded bg-white opacity b-radius">
+                    <h5 class="text-wrap text-center text-secondary m-0 p-2">
                         Since 2012, S.E.E.D. has served students in Los Angeles (US), Toronto and Hamilton (Canada).
                         Students achievement proves that Target-Oriented Practice is most effective learning strategy.
                     </h5>
@@ -27,8 +27,9 @@
 </section>
 
 <section class="page-section mb-0" id="seed_academic_boost_body">
-    <div class="container">
+    <div class="container-fluid">
         <h2 class="page-section-heading text-center text-uppercase text-secondary">S.E.E.D. Academic English</h2>
+        <div class="container">
         <div class="row py-5">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
                 <h5>Not Just Vocabulary</h5>
@@ -51,7 +52,9 @@
                 </div>
             </div>
         </div>
-        <h2 class="page-section-heading text-center text-uppercase text-secondary pb-5">More on B.E.S.T</h2>
+        </div>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary pb-5 ">More on B.E.S.T</h2>
+        <div class="container">
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
                 <h5>Not Just Vocabulary</h5>
@@ -72,6 +75,7 @@
             <div class="float-right">
                 <a class="btn btn-primary" asp-action="MathScience">Register today!</a>
             </div>
+        </div>
         </div>
         </div>
     </div>
