Redesigned school program page / Added new divider-jagged / Added new divider dot

--- a/SeedProject_V6/Views/Home/SchoolProgram.cshtml
+++ b/SeedProject_V6/Views/Home/SchoolProgram.cshtml
@@ -5,42 +5,48 @@
 
 <section class="page-section text-white mb-0 pt-0" id="seed_schoolprogram">
     <div class="jumbotron">
-        <div class="container">
+        <div class="container-fluid">
             <h2 class="page-section-heading text-center text-uppercase pb-5 text-primary section-title-primary">School program partnership</h2>
-            <div class="row text-uppercase d-flex flex-row justify-content-xl-between justify-content-lg-center justify-content-md-around">
-                <div class="card border rounded p-1 my-3 bg-white col-xl-4 col-md-12 d-flex flex-column justify-content-center text-secondary text-center graphics-card">
-                    <img class="my-2 graphics-img card-img" src="~/images/graphs/Canada.png" />
+            <div class="row text-uppercase d-flex flex-row justify-content-xl-around justify-content-lg-center justify-content-md-around">
+                <div class="card border-0 p-1 my-3 bg-white col-xl-3 col-md-12 d-flex flex-column justify-content-between text-secondary text-center graphics-card">
+                    <h4 class="card-title mt-2">Why Canada?</h4>
+                    <div class="seed-dot-divider div-transparent div-dot"></div>
+                    <img class="my-1 graphics-img card-img" src="~/images/graphs/Canada.png" />
+                    <div class="seed-dot-divider div-transparent div-dot"></div>
+                    <h6 class="card-text mb-1">World #1 in Education</h6>
                     <div class="card-img-overlay d-flex flex-column justify-content-between">
-                        <h4 class="card-title">Why Canada?</h4>
                         <i class="fas fa-arrow-down arrow1"></i>
-                        <h6 class="card-text">World #1 in Education</h6>
                     </div>
                 </div>
-                <div class="card border rounded p-1 my-3 bg-white col-xl-4 col-md-12 d-flex flex-column justify-content-center text-secondary text-center graphics-card">
-                    <img class="my-2 graphics-img card-img" src="~/images/graphs/OntarioLearning.png" />
+                <div class="card border-0 p-1 my-3 bg-white col-xl-3 col-md-12 d-flex flex-column justify-content-between text-secondary text-center graphics-card">
+                    <h4 class="card-title mt-2">Why Ontario?</h4>
+                    <div class="seed-dot-divider div-transparent div-dot"></div>
+                    <img class="my-1 graphics-img card-img" src="~/images/graphs/OntarioLearning.png" />
+                    <div class="seed-dot-divider div-transparent div-dot"></div>
+                    <h6 class="card-text mb-1">Canada #1 Achievement</h6>
                     <div class="card-img-overlay d-flex flex-column justify-content-between">
-                        <h4 class="card-title">Why Ontario?</h4>
                         <i class="fas fa-arrow-down arrow2"></i>
-                        <h6 class="card-text">Canada #1 Achievement</h6>
                     </div>
                 </div>
-                <div class="card border rounded p-1 my-3 bg-white col-xl-3 col-md-12 d-flex flex-column justify-content-center text-secondary text-center graphics-card">
-                    <img class="my-2 graphics-img card-img" src="~/images/partners/HCDSB LOGO.png" />
+                <div class="card border-0 p-1 my-3 bg-white col-xl-3 col-md-12 d-flex flex-column justify-content-between text-secondary text-center graphics-card">
+                    <h4 class="card-title mt-2">Why Seed?</h4>
+                    <div class="seed-dot-divider div-transparent div-dot"></div>
+                    <img class="my-1 graphics-img card-img" src="~/images/partners/HCDSB LOGO.png" />
+                    <div class="seed-dot-divider div-transparent div-dot"></div>
+                    <h6 class="card-text mb-1 ">95% Graduation success</h6>
                     <div class="card-img-overlay d-flex flex-column justify-content-between">
-                        <h4 class="card-title">Why Seed?</h4>
                         <i class="fas fa-arrow-down arrow3"></i>
-                        <h6 class="card-text">95% Graduation success</h6>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class='divider-jagged'></div>
 </section>
-
 <section class="page-section mb-0" id="seed_partners">
     <div class="container">
         <div class="program-title pb-5">
-            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-uppercase text-white bg-secondary">Ontario Public School K-12 : North America #4 School System</h3></a>
+            <a href="#" class="btn btn-primary w-100"><h3 class="rounded text-center text-uppercase">Ontario Public School K-12 : North America #4 School System</h3></a>
         </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
@@ -60,7 +66,7 @@
             </div>
         </div>
         <div class="program-title py-5">
-            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-white text-uppercase bg-secondary">Lyn-Rose K-12 : an IB elite school</h3></a>
+            <a href="#" class="btn btn-primary w-100"><h3 class="rounded text-center text-uppercase">Lyn-Rose K-12 : an IB elite school</h3></a>
         </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
@@ -85,7 +91,7 @@
             </div>
         </div>
         <div class="program-title py-5">
-            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-white text-uppercase bg-secondary">S.E.E.D. Credit Program</h3></a>
+            <a href="#" class="btn btn-primary w-100"><h3 class="rounded text-center text-uppercase">S.E.E.D. Credit Program</h3></a>
         </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
@@ -110,7 +116,7 @@
             </div>
         </div>
         <div class="program-title py-5">
-            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-white text-uppercase bg-secondary">Pathway to Top University</h3></a>
+            <a href="#" class="btn btn-primary w-100"><h3 class="rounded text-center text-uppercase">Pathway to Top University</h3></a>
         </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
