added dividers on courses and button has been centered

--- a/SeedProject_V6/Views/Home/Esl.cshtml
+++ b/SeedProject_V6/Views/Home/Esl.cshtml
@@ -24,6 +24,7 @@
             </div>
         </div>
     </div>
+    <div class='divider-jagged'></div>
 </section>
 
 <section class="page-section mb-0" id="seed_esl_body">
@@ -66,8 +67,8 @@
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h5>It is Story</h5>
             </div>
-            <div class="col-xl-12 text-secondary pt-4">
-                <div class="float-right">
+            <div class="col-xl-12 text-secondary pt-4 text-center">
+                <div>
                     <a class="btn btn-primary" asp-action="EnglishLearning">Register today!</a>
                 </div>
             </div>
