--- a/SeedProject_V6/Views/Home/Introduction.cshtml
+++ b/SeedProject_V6/Views/Home/Introduction.cshtml
@@ -17,13 +17,14 @@
                 </div>
                 <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border  bg-secondary opacity b-radius">
                     <h5 class="text-wrap text-center text-secondary m-0 p-2">
-                        Since 2012, S.E.E.D. has served students in Los Angeles (US), Toronto and Hamilton (Canada). 
+                        Since 2012, S.E.E.D. has served students in Los Angeles (US), Toronto and Hamilton (Canada).
                         Students achievement proves that Target-Oriented Practice is most effective learning strategy.
                     </h5>
                 </div>
             </div>
         </div>
     </div>
+    <div class='divider-jagged'></div>
 </section>
 
 <section class="page-section mb-0" id="seed_features">
