--- a/SeedProject_V6/Views/Home/Tap.cshtml
+++ b/SeedProject_V6/Views/Home/Tap.cshtml
@@ -24,6 +24,7 @@
             </div>
         </div>
     </div>
+    <div class='divider-jagged'></div>
 </section>
 
 <section class="page-section mb-0" id="seed_academic_boost_body">
